--- a/index.html
+++ b/index.html
@@ -13,12 +13,56 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center; /* Tengah-tengah secara menegak */
+      justify-content: center;
       font-family: sans-serif;
       background-color: #f8f8f8;
       box-sizing: border-box;
     }
 
+    /* MODAL POPUP */
+    #popupModal {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0, 0, 0, 0.6);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      z-index: 1000;
+    }
+
+    #popupModalContent {
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      max-width: 400px;
+      width: 90%;
+      text-align: left;
+      box-shadow: 0 0 15px rgba(0,0,0,0.3);
+    }
+
+    #popupModalContent h3 {
+      margin-top: 0;
+      color: #2a7d3d;
+    }
+
+    #closePopup {
+      background: #d33;
+      color: white;
+      float: right;
+      border: none;
+      padding: 5px 10px;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    #closePopup:hover {
+      background: #a00;
+    }
+
+    .instruction {
+      font-size: 16px;
+      margin-bottom: 10px;
+    }
     #signature-pad {
       border: 1px solid #ccc;
       width: 100%;
@@ -27,13 +71,11 @@
       touch-action: none;
       background-color: #fff;
     }
-
     .btn {
       margin: 5px;
       padding: 10px 15px;
       font-size: 14px;
     }
-
     .url-container {
       display: flex;
       flex-direction: row;
@@ -42,27 +84,31 @@
       width: 100%;
       gap: 5px;
     }
-
     input[type="text"] {
       flex-grow: 1;
       padding: 8px;
     }
-
     #upload-status {
       color: green;
       margin-top: 5px;
     }
-
-    .instruction {
-      font-size: 16px;
-      margin-bottom: 10px;
-    }
   </style>
 </head>
 <body>
+  <!-- POPUP MODAL -->
+  <div id="popupModal">
+    <div id="popupModalContent">
+      <button id="closePopup">Tutup</button>
+      <h3>Langkah-Langkah Penggunaan</h3>
+      <ol>
+        <li>SILA TANDATANGAN</li>
+        <li>MUATNAIK TANDATANGAN</li>
+        <li>SALIN URL DAN ISI DALAM GOOGLE FORM</li>
+      </ol>
+    </div>
+  </div>
 
   <div class="instruction">Sila guna jari telunjuk <span style="font-size: 18px;">👆</span></div>
-
   <h2>Pad Tandatangan</h2>
   <canvas id="signature-pad" width="400" height="150"></canvas><br>
 
@@ -76,6 +122,18 @@
   <span id="upload-status"></span>
 
   <script>
+    // Popup logic
+    window.addEventListener('DOMContentLoaded', () => {
+      const popup = document.getElementById('popupModal');
+      const closeBtn = document.getElementById('closePopup');
+      // Show popup
+      popup.style.display = 'flex';
+      // Close on click
+      closeBtn.addEventListener('click', () => {
+        popup.style.display = 'none';
+      });
+    });
+
     const canvas = document.getElementById('signature-pad');
     const signaturePad = new SignaturePad(canvas);
 
@@ -132,6 +190,5 @@
       }
     }
   </script>
-
 </body>
 </html>
